[tool.poetry]
name = "wordlesolver"
version = "0.1.0"
description = "Solver for word puzzle game wordle"
authors = ["amundis <amundis@student.matnat.uio.no>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.1"
autopep8 = "^1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
